[package]
name = "Watcher"
version = "0.9.0"
description = "Watcher, API manager built for a easier use to manage and collaborate"
authors = ["windht"]
license = ""
repository = ""
default-run = "Watcher"
edition = "2018"
build = "src/build.rs"

# See more keys and theicargo installr definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=1.0.5", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
